# app-util-lib

include/app_util_lib/: app_util_lib.h
samples/app_util_lib/: CMakeLists.txt  prj.conf
samples/app_util_lib/src/: main.c
src/: app_util_lib.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
